extends Node2D

func _ready():
	$BlobSplash.fading = false;
	$BlobSplash2.fading = false;
	$BlobSplash3.fading = false;
	$BlobSplash4.fading = false;
	$BlobSplash5.fading = false;
	$BlobSplash6.fading = false;
	$BlobSplash7.fading = false;
	$BlobSplash8.fading = false;
	$BlobSplash9.fading = false;
	$BlobSplash10.fading = false;
	$BlobSplash11.fading = false;
	$BlobSplash12.fading = false;
	$BlobSplash13.fading = false;
	$BlobSplash14.fading = false;
	$BlobSplash15.fading = false;
	$BlobSplash16.fading = false;
	$BlobSplash17.fading = false;
	$BlobSplash18.fading = false;
	$BlobSplash19.fading = false;
	$BlobSplash20.fading = false;
	$BlobSplash21.fading = false;
	$BlobSplash22.fading = false;
	$BlobSplash23.fading = false;
	$BlobSplash24.fading = false;
	$BlobSplash25.fading = false;

func _physics_process(delta):
	global_rotation_degrees += 1
